--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<option value="Colorado">Colorado</option>
 					<option value="Connecticut">Connecticut</option>
 					<option value="Delaware">Delaware</option>
-					<option value="District Of Columbia">District Of Columbia</option>
+					<option value="District of Columbia">District of Columbia</option>
 					<option value="Florida">Florida</option>
 					<option value="Georgia">Georgia</option>
 					<option value="Hawaii">Hawaii</option>
@@ -96,8 +96,8 @@
 					<option value="Wisconsin">Wisconsin</option>
 					<option value="Wyoming">Wyoming</option>
 				</select>
-				<label for="message">Message<span class="required">*</span></label>
-				<textarea id="message" name="message" required></textarea>
+				<label for="message">Message</label>
+				<textarea id="message" name="message"></textarea>
 				<input type="submit" id="submit" value="Submit">
 			</form>
 		</article>
