--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<option value="Wisconsin">Wisconsin</option>
 					<option value="Wyoming">Wyoming</option>
 				</select>
-				<label for="message">Message</label>
-				<textarea id="message" name="message"></textarea>
+				<label for="comments">Comments</label>
+				<textarea id="comments" name="comments"></textarea>
 				<input type="submit" id="submit" value="Submit">
 			</form>
 		</article>
