--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<article>
 			<h2>Coding Semantic and Accessible Forms!</h2>
 			<p>Today we'll be focusing on coding a form that is accessible and semantic, and we'll also briefly discuss skip links for your website. Forms can be a source of frustration for users, whether they specifically need help with accessing your website or if they just prefer that your forms be easy to use and submit. Follow along as we code this in class, and please ask questions as they arise. Let's make a form!</p>
-			<form action="https://wp.zybooks.com/form-viewer.php" method="post">
+			<form action="https://wp.zybooks.com/form-viewer.php" method="post" autocomplete="on">
 				<label for="fullName">Full Name<span class="required">*</span></label>
 				<input type="text" id="fullName" name="fullName" required>
 				<label for="email">Email<span class="required">*</span></label>
@@ -35,10 +35,10 @@
 				<fieldset>
 					<legend>Preferred Contact Method<span class="required">*</span></legend>
 
-					<input type="radio" id="prefPhone" name="prefMethod" required>
+					<input type="radio" id="prefPhone" name="prefMethod" required tabindex="1">
 					<label for="prefPhone">Phone</label>
 
-					<input type="radio" id="prefEmail" name="prefMethod" required>
+					<input type="radio" id="prefEmail" name="prefMethod" required tabindex="2">
 					<label for="prefEmail">Email</label>
 				</fieldset>
 				<label for="state">State<span class="required">*</span></label>
