--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				<fieldset>
 					<legend>Preferred Contact Method<span class="required">*</span></legend>
 
-					<input type="radio" id="prefPhone" name="prefMethod" required tabindex="1">
+					<input type="radio" id="prefPhone" name="prefMethod" required>
 					<label for="prefPhone">Phone</label>
 
-					<input type="radio" id="prefEmail" name="prefMethod" required tabindex="2">
+					<input type="radio" id="prefEmail" name="prefMethod" required>
 					<label for="prefEmail">Email</label>
 				</fieldset>
 				<label for="state">State<span class="required">*</span></label>
